# crypto-surge-prediction

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  pyproject.toml  requirements.txt  vercel.json
.github/workflows/: ci.yml
src/cryptosurge/: __init__.py  api.py  config.py  downloader.py  evaluate.py  features.py  indicators.py  live.py  predict.py  train.py  walkforward.py
tests/: test_basic.py
