[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cryptosurge"
version = "0.1.0"
description = "Crypto surge prediction with real market data"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26",
  "pandas>=2.2",
  "scikit-learn>=1.4",
  "joblib>=1.3",
  "requests>=2.31",
]

[tool.setuptools.packages.find]
where = ["src"]
