[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cryptosurge"
version = "0.1.0"
description = "Crypto surge prediction with real market data"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26",
  "pandas>=2.2",
  "scikit-learn>=1.4",
  "joblib>=1.3",
  "requests>=2.31",
  "fastapi>=0.110",
  "uvicorn>=0.29",
]

[project.scripts]
app = "cryptosurge.api:app"
download = "cryptosurge.downloader:main"
features = "cryptosurge.features:main"
train = "cryptosurge.train:main"
predict = "cryptosurge.predict:main"
evaluate = "cryptosurge.evaluate:main"
serve = "cryptosurge.api:main"
backtest = "cryptosurge.walkforward:main"

[tool.setuptools.packages.find]
where = ["src"]
